corrected the missing global div and link

--- a/index.html
+++ b/index.html
@@ -9,52 +9,53 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Montserrat:300,400,700">
 </head>
 <body>
-  <div class="container card text-align">
-    <img src="images/max_le_wagon.jpg" alt="Maximilien Rufin" class ="img-circle" id = "img-profile" class="profile-picture">
-    <h1>Maximilien Rufin</h1>
-    <h2>COO @ The Grumpy Yeti Company</h2>
-    <p>After 2 years and a half working for the french defense industry, I decided to build my own company. The Grumpy Yeti Company is building Guess Whaaat, an app to challenge your friends on the outcomes of your favorite TV Shows.</p>
-    <br>
-    <a href="www.guesswhaaat.com" class="btn-red">See for yourself</a>
-  </div>
-  <div class="container card text-align">
-    <ul class="list-inline">
-      <li><a href="https://www.facebook.com/guesswhaaaatapp/"><i class="fa fa-facebook" class="list-inline"><br></i> Facebook</a></li>
-      <li><a href="https://twitter.com/whaaatapp" class="list-inline"><i class="fa fa-twitter"><br></i> Twitter</a></li>
-      <li><a href="https://www.instagram.com/guesswhaaatapp/" class="list-inline"><i class="fa fa-instagram"><br></i> Instagram</a></li>
-    </ul>
-  </div>
-  <div class="container card text-align">
-    <h2 class="h2-shows">My favorite TvShows!</h2>
-    <table>
-      <tr>
-        <td>
-          <img src="images/BreakingBad.jpg" alt="Breaking Bad" class="tvshow-poster">
-        </td>
-        <td>
-          <h3>Breaking Bad</h3>
-          <p>A high school chemistry teacher diagnosed with inoperable lung cancer turns to manufacturing and selling methamphetamine in order to secure his family's future.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <img src="images/PeakyBlinders.jpg" alt="Peaky Blinders" class="tvshow-poster">
-        </td>
-        <td>
-          <h3>Peaky Blinders</h3>
-          <p>A gangster family epic set in 1919 Birmingham, England and centered on a gang who sew razor blades in the peaks of their caps, and their fierce boss Tommy Shelby, who means to move up in the world.</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <img src="images/MrRobot.jpg" alt="Mr Robot" class="tvshow-poster">
-        </td>
-        <td>
-          <h3>Mr Robot</h3>
-          <p>Follows Elliot, a young programmer working as a cyber-security engineer by day, and a vigilante hacker by night.</p>
-        </td>
-      </tr>
-    </table>
-</div>
+  <div class="container">
+    <div class="card text-align">
+      <img src="images/max_le_wagon.jpg" alt="Maximilien Rufin" class ="img-circle" id = "img-profile" class="profile-picture">
+      <h1>Maximilien Rufin</h1>
+      <h2>COO @ The Grumpy Yeti Company</h2>
+      <p>After 2 years and a half working for the french defense industry, I decided to build my own company. The Grumpy Yeti Company is building Guess Whaaat, an app to challenge your friends on the outcomes of your favorite TV Shows.</p>
+      <br>
+      <a href="https://www.guesswhaaat.com" class="btn-red">See for yourself</a>
+    </div>
+    <div class="card text-align">
+      <ul class="list-inline">
+        <li><a href="https://www.facebook.com/guesswhaaaatapp/"><i class="fa fa-facebook" class="list-inline"><br></i> Facebook</a></li>
+        <li><a href="https://twitter.com/whaaatapp" class="list-inline"><i class="fa fa-twitter"><br></i> Twitter</a></li>
+        <li><a href="https://www.instagram.com/guesswhaaatapp/" class="list-inline"><i class="fa fa-instagram"><br></i> Instagram</a></li>
+      </ul>
+    </div>
+    <div class="card text-align">
+      <h2 class="h2-shows">My favorite TvShows!</h2>
+      <table>
+        <tr>
+          <td>
+            <img src="images/BreakingBad.jpg" alt="Breaking Bad" class="tvshow-poster">
+          </td>
+          <td>
+            <h3>Breaking Bad</h3>
+            <p>A high school chemistry teacher diagnosed with inoperable lung cancer turns to manufacturing and selling methamphetamine in order to secure his family's future.</p>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img src="images/PeakyBlinders.jpg" alt="Peaky Blinders" class="tvshow-poster">
+          </td>
+          <td>
+            <h3>Peaky Blinders</h3>
+            <p>A gangster family epic set in 1919 Birmingham, England and centered on a gang who sew razor blades in the peaks of their caps, and their fierce boss Tommy Shelby, who means to move up in the world.</p>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <img src="images/MrRobot.jpg" alt="Mr Robot" class="tvshow-poster">
+          </td>
+          <td>
+            <h3>Mr Robot</h3>
+            <p>Follows Elliot, a young programmer working as a cyber-security engineer by day, and a vigilante hacker by night.</p>
+          </td>
+        </tr>
+      </table>
+    </div>
 </body>
 </html>
